--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@reduxjs/toolkit": "^2.3.0",
+        "@tinymce/tinymce-react": "^5.1.1",
         "firebase": "^11.0.1",
         "formik": "^2.4.6",
         "react": "^18.3.1",
