--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
         "@tinymce/tinymce-react": "^5.1.1",
         "firebase": "^11.0.1",
         "formik": "^2.4.6",
+        "fs-extra": "^11.2.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.28.0",
         "react-toastify": "^10.0.6",
+        "tinymce": "^7.5.1",
         "yup": "^1.4.0"
     },
     "devDependencies": {
