--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.13.5",
+        "@emotion/styled": "^11.13.5",
         "@fortawesome/fontawesome-svg-core": "^6.6.0",
         "@fortawesome/free-brands-svg-icons": "^6.6.0",
         "@fortawesome/free-regular-svg-icons": "^6.6.0",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@mui/icons-material": "^6.1.9",
+        "@mui/material": "^6.1.9",
         "@reduxjs/toolkit": "^2.3.0",
         "@tinymce/tinymce-react": "^5.1.1",
+        "axios": "^1.7.9",
         "firebase": "^11.0.1",
         "formik": "^2.4.6",
         "fs-extra": "^11.2.0",
