--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.6.0",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@hookform/resolvers": "^3.9.1",
         "@mui/icons-material": "^6.1.9",
         "@mui/material": "^6.1.9",
         "@reduxjs/toolkit": "^2.3.0",
@@ -27,11 +28,14 @@
         "fs-extra": "^11.2.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.54.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.28.0",
         "react-toastify": "^10.0.6",
+        "styled-components": "^6.1.13",
         "tinymce": "^7.5.1",
-        "yup": "^1.4.0"
+        "yup": "^1.4.0",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@eslint/js": "^9.13.0",
