--- a/package.json
+++ b/package.json
@@ -22,16 +22,20 @@
         "@mui/material": "^6.1.9",
         "@reduxjs/toolkit": "^2.3.0",
         "@tinymce/tinymce-react": "^5.1.1",
+        "antd": "^5.22.3",
         "axios": "^1.7.9",
+        "dayjs": "^1.11.13",
         "firebase": "^11.0.1",
         "formik": "^2.4.6",
         "fs-extra": "^11.2.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.54.0",
+        "react-icons": "^5.4.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.28.0",
         "react-toastify": "^10.0.6",
+        "rsuite": "^5.75.0",
         "styled-components": "^6.1.13",
         "tinymce": "^7.5.1",
         "yup": "^1.4.0",
