--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@mui/icons-material": "^6.1.9",
         "@mui/material": "^6.1.9",
         "@reduxjs/toolkit": "^2.3.0",
+        "@rsuite/icons": "^1.3.0",
         "@tinymce/tinymce-react": "^5.1.1",
         "antd": "^5.22.3",
         "axios": "^1.7.9",
