--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-icons": "^5.4.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.28.0",
+        "react-spinners": "^0.15.0",
         "react-toastify": "^10.0.6",
         "rsuite": "^5.75.0",
         "styled-components": "^6.1.13",
